windows & jump bugs